# bramha

./: .antigravityignore  .gitignore  BRAMHA_MEMORY.md  Bramha Neural Engine — Master Roadmap v8.0.md  Bramha Neural Engine — Master Roadmap v8.0.md.bak  Cargo.toml  DEVELOPMENT_PRINCIPLES.md  EXECUTION_ROADMAP.md  LICENSE  README.md  README.md.bak  STORAGE_EFFICIENCY_ROADMAP.md  STORAGE_ORCHESTRATION_EXAMPLE.rs  Sprint 10 Execution Cards.md  Sprint 11 Execution Cards.md  Sprint 2 Execution Cards.md  Sprint 4 Execution Cards.md  Sprint 7 Execution Cards.md  Sprint 9 Execution Cards.md  build.rs  calm-honking-aho.md  cargo-deny.toml  deny.toml  sprint9_benchmark_report.md
.cargo/: config.toml
.githooks/: README.md  pre-push
.github/workflows/: ci.yml
benches/: end_to_end_storage.rs  inference_bench.rs
dashboard/: index.html  script.js  style.css
docs/: BRAMHA_MEMORY.md  Bramha Neural Engine — Master Roadmap v8.0.md  DEVELOPMENT_PRINCIPLES.md  HYPERSCALE.md  MASTER_CHECKLIST.md  SPANDA_Design.md  SPANDA_Integration.md  STORAGE_DELIVERY_CHECKLIST.md  STORAGE_EFFICIENCY_ROADMAP.md  STORAGE_IMPLEMENTATION_GUIDE.md  STORAGE_STRATEGY_SUMMARY.md  Sprint 1 Execution Cards.md  Sprint 3 Execution Cards.md  Sprint 5 Execution Cards.md  Sprint 6 Execution Cards.md  Sprint 8 Execution Cards.md  VISION.md  sprint9_benchmark_report.md
proto/: bramha.proto
spanda-engine/: Cargo.toml
spanda-engine/src/: jaccard.rs  lib.rs  paging.rs  sparse.rs
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  router.rs
src/cognitive/: adapter.rs  analytics.rs  controller.rs  dashboard_ops.rs  evidence.rs  goal_graph.rs  integrity.rs  memory.rs  mod.rs  onboard.rs  pipeline.rs  research.rs  router.rs  verifier.rs
src/compute/: wgpu_backend.rs
src/concurrency/: mod.rs  rayon_bridge.rs
src/core/: collection.rs  distance.rs  filter.rs  mod.rs  tensor.rs  vector.rs
src/index/: bm25.rs  hnsw.rs  ivf_flat.rs  kmeans.rs  mod.rs  strategies.rs
src/inference/: calibration.rs  cpu_engine.rs  embedder.rs  engine.rs  flash_attn_cpu.rs  mod.rs  pipeline.rs  power.rs  prefetcher.rs  prefill_cache.rs  profiler.rs  reranker.rs  spanda_backend.rs  spanda_telemetry.rs  sparse_predictor.rs  tokenizer.rs
src/middleware/: auth.rs  mod.rs  queue.rs
src/models/: quantization.rs
src/network/: client.rs  gossip.rs  mod.rs  server.rs
src/planner/: cluster.rs  cost_model.rs  mod.rs  optimizer.rs  policy.rs  scheduler.rs
src/storage/: activation_view.rs  answer_cache.rs  atomic_write.rs  block_db.rs  cache_db.rs  caching.rs  chunker.rs  content_addressing.rs  crud.rs  data_organization.rs  differential_compression.rs  disk.rs  factorization.rs  indexing.rs  kv_persistence.rs  metadata_sql.rs  mod.rs  model_view.rs  multi_tier.rs  pull.rs  tensor_db.rs  (+6 more)
storage/: test_activation_view.db-shm  test_activation_view.db-wal  test_cost_model_recal.db-shm  test_cost_model_recal.db-wal  test_planner_metadata.db-shm  test_planner_metadata.db-wal
tests/: cognitive_api_validation.rs  golden_regression.rs  oom_stability_validation.rs  security_validation.rs
(+10 files in other folders)
