[package]
name = "bramha"
version = "0.1.0"
edition = "2024"
license = "MIT"
default-run = "bramha"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
axum = "0.7"
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "=2.0.0-rc.3", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
memmap2 = "0.9.10"
bytemuck = "1.25.0"
half = { version = "2.7.1", features = ["bytemuck"] }
safetensors = "0.7.0"
burn = { version = "0.13.2", features = ["wgpu", "ndarray"] }
wgpu = { version = "0.19.4", features = ["spirv"] }
tokenizers = "0.22.2"
sha2 = "0.10"
rayon = "1.12.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
libc = "0.2"
pollster = "0.3.0"
blake3 = "1.5"
lru = "0.16.3"
dashmap = "6"
crossbeam = "0.8"
parking_lot = "0.12"
nalgebra = "0.35.0"
rustfft = "6.1"
crc32fast = "1.4"
ndarray = "0.15"
spanda-engine = { version = "0.7.0", path = "spanda-engine" }
minijinja = "2.1.1"
tonic = { version = "0.12.3", optional = true }
prost = { version = "0.13.3", optional = true }
naga = { version = "0.19.2", features = ["deserialize", "serialize", "spv-out", "wgsl-in"] }

[profile.dev]
opt-level = 0
debug = 1           # Line tables only, reduces link time drastically
codegen-units = 256 # Maximize parallel compilation

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bin]]
name = "storage_orchestration_example"
path = "STORAGE_ORCHESTRATION_EXAMPLE.rs"

[[bin]]
name = "frontier_bench"
path = "src/bin/frontier_bench.rs"

[[bench]]
name = "inference_bench"
harness = false

[[bench]]
name = "end_to_end_storage"
harness = false

[features]
default = ["manifest_load", "planner_tier_aware", "prefetch"]
manifest_load = []
planner_tier_aware = []
prefetch = []
hyperscale = ["dep:tonic", "dep:prost"]

[build-dependencies]
tonic-build = "0.12.3"


